crates/nash-can/tests/snapshots/kind_predicates__record_body_bounds_use_the_alias_representation-3.snap
---
source: crates/nash-can/tests/kind_predicates.rs
description: "module Main exposing (..)\n\nimport Primitive exposing (..)\nimport Builtin exposing (..)\n\ntype alias record = ({ field : int } : Big)\n"
---
nash::names::representation_mismatch

  × This position requires `Big` in the type annotation:
   ╭─[src/Main.nash:6:22]
 5 │ 
 6 │ type alias record = ({ field : int } : Big)
   ·                      ───────────────
   ╰────
  help: The type has `Term` representation, but `Big` admits only Big types. Change the
        type or the representation requirement.
