crates/nash-can/tests/snapshots/kind_predicates__recursive_kind_occurs_check.snap
---
source: crates/nash-can/tests/kind_predicates.rs
description: "module Main exposing (..)\n\nimport Primitive exposing (..)\nimport Builtin exposing (..)\n\ntype self 'f = Self ('f 'f)\n"
---
nash::names::kind_infinite

  × This application in field 1 of little constructor `Self` in `self` would require
  │ an infinite kind:
   ╭─[src/Main.nash:6:25]
 5 │ 
 6 │ type self 'f = Self ('f 'f)
   ·                         ──
   ╰────
  help: Check the type application and the kinds of its arguments.
